--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -523,6 +523,7 @@
 /core/templates/pages/pending-account-deletion-page/ @jameesjohn @vojtechjelinek
 /core/templates/pages/preferences-page/ @jameesjohn @vojtechjelinek
 /core/templates/pages/signup-page/ @jameesjohn @vojtechjelinek
+/core/templates/pages/signup-page/ @jameesjohn @vojtechjelinek
 /core/templates/pages/splash-page/ @jameesjohn @vojtechjelinek
 /core/templates/pages/teach-page/ @jameesjohn @vojtechjelinek
 /core/templates/pages/thanks-page/ @jameesjohn @vojtechjelinek
