--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -523,8 +523,9 @@
 /core/templates/pages/pending-account-deletion-page/ @jameesjohn @vojtechjelinek
 /core/templates/pages/preferences-page/ @jameesjohn @vojtechjelinek
 /core/templates/pages/signup-page/ @jameesjohn @vojtechjelinek
-/core/templates/pages/signup-page/ @jameesjohn @vojtechjelinek
+/core/templates/pages/signup-page/ @judeuba @henderson
 /core/templates/pages/splash-page/ @jameesjohn @vojtechjelinek
+/core/templates/pages/signup-page/ @kevinlee @henderson
 /core/templates/pages/teach-page/ @jameesjohn @vojtechjelinek
 /core/templates/pages/thanks-page/ @jameesjohn @vojtechjelinek
 
