--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -525,7 +525,7 @@
 /core/templates/pages/signup-page/ @jameesjohn @vojtechjelinek
 /core/templates/pages/signup-page/ @judeuba @henderson
 /core/templates/pages/splash-page/ @jameesjohn @vojtechjelinek
-/core/templates/pages/signup-page/ @kevinlee @henderson
+/core/templates/pages/signup-page/ @kevintab95 @henderson
 /core/templates/pages/teach-page/ @jameesjohn @vojtechjelinek
 /core/templates/pages/thanks-page/ @jameesjohn @vojtechjelinek
 
