--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -593,6 +593,8 @@
 /extensions/rich_text_components/protractor.js @U8NWXD
 /extensions/objects/protractor.js @U8NWXD
 
+# A new commit haha
+
 
 # Critical files.
 #
