--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -593,7 +593,7 @@
 /extensions/rich_text_components/protractor.js @U8NWXD
 /extensions/objects/protractor.js @U8NWXD
 
-# A new commit haha
+# A new commit haha hahaha
 
 
 # Critical files.
